Game Analysis extras

--- a/chess_app.kv
+++ b/chess_app.kv
@@ -109,7 +109,7 @@
             id: use_medal_positions
             halign: 'center'
             group: 'advantage'
-            text: 'Medal Positions?'
+            text: 'Medal Positions? (Positions containing "medal" in comments)'
             state: 'normal'
         Label:
             text: 'Seconds per move on regular and interesting positions'
