--- a/chessprogram_.kv
+++ b/chessprogram_.kv
@@ -97,6 +97,81 @@
                     text: 'Export Games'
                     on_press: root.save_games(self)
 
+<OpeningAnalysisPopup>:
+    size_hint: 1, 1
+    auto_dismiss: False
+    title: 'Opening Builder'
+    BoxLayout:
+        orientation: 'vertical'
+        ToggleButton:
+            id: use_ext_eng
+            halign: 'center'
+            group: 'advantage'
+            text: 'External Engine'
+            state: 'normal'
+        Label:
+            text: 'Seconds per move on regular and novel positions'
+        BoxLayout:
+            orientation: 'horizontal'
+            LabeledSlider:
+                id: regular_seconds_per_move
+                value: 4
+                min: 1
+                max: 600
+                on_value: self.value = int(self.value)
+            LabeledSlider:
+                id: interesting_seconds_per_move
+                value: 60
+                min: 1
+                max: 600
+                on_value: self.value = int(self.value)
+
+        Label:
+            text: 'Dubious/Mistake/Blunder centipawn thresholds'
+        BoxLayout:
+            orientation: 'horizontal'
+            LabeledSlider:
+                id: dubious_threshold
+                value: 35
+                min: 1
+                max: 100
+                on_value: self.value = int(self.value)
+            LabeledSlider:
+                id: mistake_threshold
+                value: 60
+                min: 1
+                max: 200
+                on_value: self.value = int(self.value)
+            LabeledSlider:
+                id: blunder_threshold
+                value: 200
+                min: 1
+                max: 500
+                on_value: self.value = int(self.value)
+        BoxLayout:
+            orientation: 'horizontal'
+            ToggleButton:
+                halign: 'center'
+                group: 'advantage'
+                id: white_rep
+                text: 'Build White Repertoire'
+                state: 'normal'
+            ToggleButton:
+                halign: 'center'
+                group: 'advantage'
+                id: black_rep
+                text: 'Build Black Repertoire'
+                state: 'normal'
+
+        BoxLayout:
+            orientation: 'horizontal'
+            Button:
+                text: 'Start'
+                on_press: root.start_analyze_opening({"dubious_threshold": dubious_threshold.value, "mistake_threshold": mistake_threshold.value, "blunder_threshold": blunder_threshold.value, "regular_sec_per_move": regular_seconds_per_move.value, "interesting_sec_per_move": interesting_seconds_per_move.value, "use_ext_eng": use_ext_eng.state, "white_rep": white_rep.state, "black_rep": black_rep.state})
+            Button:
+                text: 'Cancel'
+                on_press: root.dismiss()
+
 
 <GameAnalysisPopup>:
     size_hint: 1, 1
@@ -200,8 +275,12 @@
                 on_press: root.toggle_engine(ENGINE_TRAINING)
 
             ActionButton:
-                text: 'Game Review'
+                text: 'Review'
                 on_press: root.analyze_game(self)
+
+            ActionButton:
+                text: 'Opening'
+                on_press: root.analyze_opening(self)
 
             ActionGroup:
                 id: game_action_group
