--- a/chessprogram_.kv
+++ b/chessprogram_.kv
@@ -112,6 +112,9 @@
                     text: 'Save Game'
                     on_press: root.save(self)
                 ActionButton:
+                    text: 'Replace Game'
+                    on_press: root.save(self, replace=True)
+                ActionButton:
                     text: 'Export Games'
                     on_press: root.save_games(self)
 
