--- a/chessprogram_.kv
+++ b/chessprogram_.kv
@@ -273,7 +273,7 @@
 
 <EngineControls>:
     ActionBar:
-        size_hint_y: None
+        size_hint_y: 1
         ActionView:
             use_separator: True
             ActionPrevious:
