--- a/chessprogram_.kv
+++ b/chessprogram_.kv
@@ -1,7 +1,6 @@
 #:import ENGINE_ANALYSIS main.ENGINE_ANALYSIS
 #:import ENGINE_TRAINING main.ENGINE_TRAINING
 #:import ENGINE_PLAY main.ENGINE_PLAY
-#:import pgn chess.pgn
 
 
 [HSeparator@Label]:
@@ -35,36 +34,36 @@
                 text: '!?'
                 ActionButton:
                     text: 'Reset'
-                    on_press: root.set_move_eval(pgn.NAG_NULL, self)
+                    on_press: root.set_move_eval(NAG_NULL, self)
 
                 ActionButton:
                     text: '!?'
-                    on_press: root.set_move_eval(pgn.NAG_SPECULATIVE_MOVE, self)
+                    on_press: root.set_move_eval(NAG_SPECULATIVE_MOVE, self)
                 ActionButton:
                     text: '!'
-                    on_press: root.set_move_eval(pgn.NAG_GOOD_MOVE, self)
+                    on_press: root.set_move_eval(NAG_GOOD_MOVE, self)
                 ActionButton:
                     text: '?'
-                    on_press: root.set_move_eval(pgn.NAG_MISTAKE, self)
+                    on_press: root.set_move_eval(NAG_MISTAKE, self)
                 ActionButton:
                     text: '?!'
-                    on_press: root.set_move_eval(pgn.NAG_DUBIOUS_MOVE, self)
+                    on_press: root.set_move_eval(NAG_DUBIOUS_MOVE, self)
             ActionGroup:
                 id: eval_action_group
                 mode: 'normal'
                 text: 'Eval'
                 ActionButton:
                     text: 'Reset'
-                    on_press: root.set_pos_eval(pgn.NAG_NULL, self)
+                    on_press: root.set_pos_eval(NAG_NULL, self)
                 ActionButton:
                     text: '+='
-                    on_press: root.set_pos_eval(pgn.NAG_WHITE_SLIGHT_ADVANTAGE, self)
+                    on_press: root.set_pos_eval(NAG_WHITE_SLIGHT_ADVANTAGE, self)
                 ActionButton:
                     text: '='
-                    on_press: root.set_pos_eval(pgn.NAG_DRAWISH_POSITION, self)
+                    on_press: root.set_pos_eval(NAG_DRAWISH_POSITION, self)
                 ActionButton:
                     text: '=+'
-                    on_press: root.set_pos_eval(pgn.NAG_BLACK_SLIGHT_ADVANTAGE, self)
+                    on_press: root.set_pos_eval(NAG_BLACK_SLIGHT_ADVANTAGE, self)
                 ActionButton:
                     text: 'Comment'
                     on_press: root.open_comment_dialog(self)
